# context-audit

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
context_audit/: analyzer.py  cli.py  parser.py  reporter.py
examples/: benchmark_summary.md  regression_case.md  single_session_report.md
sample_data/: sample_session.json  sample_transcript.jsonl
tests/: test_audit.py
