[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context-audit"
version = "0.1.0"
description = "A CLI tool to audit LLM context token usage, timelines, repetition, and waste in agent logs."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "rich>=13.0.0",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
context-audit = "context_audit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["context_audit*"]
